--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ app/proguard-rules.pro
 app/google-services.json
 app/src/main/res/values/google_maps_api.xml
 app/src/main/res/values/secrets.xml
+app/src/main/res/xml/app_tracker.xml
